# eml2csv

./: README.md  how-to-use.md  lib.py  pyproject.toml  util.py
.github/: dependabot.yml
.github/workflows/: buildrelease.yml  test.yml
src/eml2csv/: __about__.py  __init__.py  lib.py  main.py  util.py
tests/: Kandidatenlijsten_GR2022_WestMaasenWaal.eml.xml  Kandidatenlijsten_TK2025_Haarlem.eml.xml  Kandidatenlijsten_TK2025_Nijmegen.eml.xml  Telling_GR2022_WestMaasenWaal.eml.xml  Telling_TK2025_gemeente_West_Maas_en_Waal.eml.xml  __init__.py  osv4-3_telling_gr2022_westmaasenwaal.csv  osv4-3_telling_gr2022westmaasenwaal_gemeente_westmaasenwaal.csv  osv4-3_telling_tk2025_gemeente_westmaasenwaal.csv  test_eml2csv.py
